--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <title>RohanJ BIO</title>
     <head>This it git tutorial</head>
     <body>
-        <p>I am from Goa and i work for Qxf2 Services</p>
+        <p>I am from Goa and i work for Qxf2 Services Pvt ltd bangalore</p>
     </body>
 </html>
+
+
